force-app/main/default/objects/CommissionLineItem2__c/fields/Actual_Amount_for_Commission__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_for_Commission__c</fullName>
    <description>This field is used to calculate managers commission. No need to put in a layout. It is only used in code.</description>
    <label>Actual Amount for Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>