force-app/main/default/objects/CommissionLineItem2__c/fields/Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Descriptor__c</fullName>
    <formula>IF( ISBLANK( Product__c ),  Description__c ,  Product__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descriptor</label>
    <type>Text</type>
</CustomField>