force-app/main/default/objects/CommissionLineItem2__c/fields/Labour_Cost__c.field-meta.xml
<CustomField>
    <fullName>Labour_Cost__c</fullName>
    <label>Labour Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>