force-app/main/default/objects/CommissionLineItem2__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>AcctSeedERP__Material__c</referenceTo>
    <relationshipLabel>Commission Line Items</relationshipLabel>
    <relationshipName>Commission_Line_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>