force-app/main/default/objects/CommissionLineItem2__c/fields/Payment_Based_on_Profit__c.field-meta.xml
<CustomField>
    <fullName>Payment_Based_on_Profit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, the commission payment amount is a percentage of the profit amount
if FALSE, the commission payment amount is a percentage of the sale amount</description>
    <label>Payment Based on Profit</label>
    <type>Checkbox</type>
</CustomField>