force-app/main/default/objects/CommissionLineItem2__c/fields/Total_Labour__c.field-meta.xml
<CustomField>
    <fullName>Total_Labour__c</fullName>
    <formula>Quantity__c * ( NULLVALUE(  Labour_Cost__c , 0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Labour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>