force-app/main/default/objects/CommissionLineItem2__c/fields/Total_Sale__c.field-meta.xml
<CustomField>
    <fullName>Total_Sale__c</fullName>
    <formula>Quantity__c * ( NULLVALUE( Sale_Price__c, 0 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>