force-app/main/default/objects/CommissionLineItem2__c/validationRules/Description_required_for_custom_line_ite.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_required_for_custom_line_ite</fullName>
    <active>false</active>
    <description>Make sure the description is provided if this is a custom line item</description>
    <errorConditionFormula>ISNULL(Description__c) &amp;&amp; ISNULL( Material__c )</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>A Description is required</errorMessage>
</ValidationRule>